fixed validation spacing

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -64,16 +64,22 @@ body {
 
 .overview {
   width: 100%;
+  padding: 30px 0 30px 0;
 }
 
 .validation-container {
   width:100%;
-  padding-bottom: 60px;
+  padding-bottom: 40px;
+  text-align: justify;
+  -ms-text-justify: distribute-all-lines;
+  text-justify: distribute-all-lines;
 }
 
 .validation {
   width: 200px;
   display: inline-block;
+  *display:inline;
+  zoom: 1;
   height: 250px;
   vertical-align: top;
   .placeholder {
@@ -81,9 +87,16 @@ body {
     height: 200px;
     width: 200px;
   }
-  h3 {
+  p {
     text-align: center;
   }
+}
+
+.stretch {
+  width: 100%;
+  display: inline-block;
+  font-size: 0;
+  line-height: 0
 }
 
 .example-container {
@@ -124,11 +137,16 @@ body {
   }
 }
 
-
+.how-to-container {
+  padding-top: 20px;
+}
 
 .how-to-list {
   list-style: none;
-  padding-left: 0;
+  padding: 15px 0 30px 0;
+  li {
+    padding: 10px 0 10px 0;
+  }
   .how-to-item {
     display: inline-block;
     &.description {
@@ -142,6 +160,7 @@ body {
     &.placeholder-3 {
       width:100px;
       height: 100px;
+      border-radius: 50%;
       background-color: $bg-gray;
     }
   }
